// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSelectable is rendered 1`] = `
<div
  class="ouiSelectable testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiSelectable props allowExclusions 1`] = `
<div
  class="ouiSelectable"
/>
`;

exports[`OuiSelectable props height can be forced 1`] = `
<div
  class="ouiSelectable"
/>
`;

exports[`OuiSelectable props height can be full 1`] = `
<div
  class="ouiSelectable ouiSelectable-fullHeight"
/>
`;

exports[`OuiSelectable props isLoading 1`] = `
<div
  class="ouiSelectable"
/>
`;

exports[`OuiSelectable props listProps 1`] = `
<div
  class="ouiSelectable"
/>
`;

exports[`OuiSelectable props renderOption 1`] = `
<div
  class="ouiSelectable"
/>
`;

exports[`OuiSelectable props searchable 1`] = `
<div
  class="ouiSelectable"
/>
`;

exports[`OuiSelectable props singleSelection 1`] = `
<div
  class="ouiSelectable"
/>
`;
